--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,7 +42,7 @@ dependencies:
   intl: ^0.20.2
   firebase_messaging: ^16.0.0
   flutter_local_notifications: ^19.4.0
-  ota_update: ^4.0.0
+  git pushota_update: ^4.0.0
 
 
 dev_dependencies:
