--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,8 +42,18 @@ dependencies:
   intl: ^0.20.2
   firebase_messaging: ^16.0.0
   flutter_local_notifications: ^19.4.0
-  git pushota_update: ^4.0.0
-
+  http: ^1.4.0
+  path_provider: ^2.1.1
+  url_launcher: ^6.2.5
+  dio: ^5.4.0
+  package_info_plus: ^8.3.0
+  flutter_downloader: ^1.11.6
+  permission_handler: ^12.0.1
+  open_filex: ^4.0.0
+  device_info_plus: ^11.5.0
+  web: ^1.1.1
+#  js: ^0.7.2
+  firebase_performance: ^0.11.0
 
 dev_dependencies:
   flutter_test:
